<resources>
    <string name="app_name">spring</string>
    <!--밑줄긋기-->
    <string name="textView1">spring</string>
    <string name="textView2">spring</string>
    <string name="title_activity_reset">Reset</string>
    <string name="todo">TODO</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
</resources>
